# sidewinder

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
src/: driver.py
src/analysis/: __init__.py  analyzer.py
src/analysis/ast/: tests.txt  transformer.py  transformer_assign.py  transformer_base.py  transformer_classes.py  transformer_control_flow_breaker.py  transformer_expr.py  transformer_for.py  transformer_functions.py  transformer_helpers.py  transformer_if.py  transformer_modules.py  transformer_try.py  transformer_while.py  transformer_with.py
src/analysis/symbolic/: assumption.py  callable_value.py  value.py
src/analysis/symbolic/hook/: __init__.py  sidewinder_hook.py
src/analysis/symbolic/lattice/: final_string.py  placeholder_string.py
src/analysis/transform/: transformer.py  transformer_assign.py  transformer_base.py  transformer_classes.py  transformer_context.py  transformer_control_flow_breaker.py  transformer_expr.py  transformer_for.py  transformer_functions.py  transformer_helpers.py  transformer_if.py  transformer_modules.py  transformer_try.py  transformer_while.py  transformer_with.py
src/analysis/transformer/: version.py
src/sidewinder/: driver.py
src/sidewinder/analysis/: __init__.py  analyzer.py
src/sidewinder/analysis/symbolic/: callable_value.py  effect.py  guard.py
src/sidewinder/analysis/transform/: errors.py  transformer.py  transformer_assign.py  transformer_base.py  transformer_classes.py  transformer_context.py  transformer_expr.py  (+9 more)
test/analysis/transform/: test_transform.py
(+73 files in other folders)
